--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.26"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -36,11 +37,15 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^2.0.0",
+    "coffee-loader": "^0.9.0",
     "coffeescript": "^2.5.1",
     "css-loader": "^3.5.3",
+    "deepmerge": "^4.2.2",
+    "fibers": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-loader": "^15.9.1",
     "vue-style-loader": "^4.1.2",
